--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -36,17 +36,19 @@ jobs:
           token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
       - name: Checkout submodules, configure git
         run: |
-          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive
+          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
           git config --local user.name "The Silk.NET Automaton" 
       - name: Extra prerequisites
         run: |
           echo running extras
           ${{ matrix.env.extras }}
-      - name: Setup .NET 6.0
+      - name: Setup .NET 6.0 and .NET 7.0
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.201
+          dotnet-version: |
+            6.0.201
+            7.0.*
       - name: Build GLFW
         run: ${{ matrix.env.nuke_invoke }} glfw
         env:
