--- a/src/Microsoft/Silk.NET.Direct2D/Silk.NET.Direct2D.csproj
+++ b/src/Microsoft/Silk.NET.Direct2D/Silk.NET.Direct2D.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>preview</LangVersion>
+    <RootNamespace>Silk.NET</RootNamespace>
   </PropertyGroup>
 
   <Import Project="..\..\..\build\props\bindings.props" />
