--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "build/submodules/SPIRV-Tools"]
 	path = build/submodules/SPIRV-Tools
 	url = https://github.com/KhronosGroup/SPIRV-Tools
+[submodule "build/submodules/SPIRV-Reflect"]
+	path = build/submodules/SPIRV-Reflect
+	url = https://github.com/KhronosGroup/SPIRV-Reflect
