SPIRV.Reflect: Reference base SPIRV project

--- a/src/SPIRV/Silk.NET.SPIRV.Reflect/Silk.NET.SPIRV.Reflect.csproj
+++ b/src/SPIRV/Silk.NET.SPIRV.Reflect/Silk.NET.SPIRV.Reflect.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Silk.NET.SPIRV\Silk.NET.SPIRV.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\..\build\props\bindings.props" />
