--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -57,8 +57,8 @@ jobs:
 
             wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
             chmod +x ./dotnet-install.sh
-            ./dotnet-install.sh --version 6.0.*
-            ./dotnet-install.sh --version 7.0.*
+            ./dotnet-install.sh --version 6.0.408
+            ./dotnet-install.sh --version 7.0.203
 
             ${{ matrix.env.nuke_invoke }} SDL2
         env:
