--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -60,6 +60,9 @@ jobs:
             ./dotnet-install.sh --version 7.0.203
             ./dotnet-install.sh --version 6.0.408
 
+            export DOTNET_ROOT=$HOME/.dotnet
+            export PATH=$PATH:$HOME/.dotnet:$HOME/.dotnet/tools
+
             ${{ matrix.env.nuke_invoke }} SDL2
         env:
           PUSHABLE_GITHUB_TOKEN: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
