--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,8 @@ jobs:
     # Note: the reason we use windows-2022 instead of windows-latest is so that both the self-hosted runner
     # (which has the windows-2022 label but NOT the windows-latest label) and the GitHub hosted runner are
     # treated as candidates. We will never have a windows-latest self-hosted runner even if it is the latest. 
-    runs-on: ${{ github.repository == 'dotnet/Silk.NET' && startsWith(github.ref, 'refs/tags/') && 'windows-quick' || github.repository == 'dotnet/Silk.NET' && 'windows-2022' || 'windows-latest' }}
+    # runs-on: ${{ github.repository == 'dotnet/Silk.NET' && startsWith(github.ref, 'refs/tags/') && 'windows-quick' || github.repository == 'dotnet/Silk.NET' && 'windows-2022' || 'windows-latest' }}
+    runs-on: windows-latest #this is temporary until the self-hosted runner is un-borked
     steps:
     - uses: actions/checkout@v3.5.2
       with:
