Build SDL2 libraries in CI (#1438)
* SDL2.Native: Build Linux native libs in CI

* New binaries for SDL2 on Linux 5.15.0-1036-azure #43-Ubuntu SMP Wed Mar 29 16:11:05 UTC 2023 (#1439)

Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>

* SDL2.Native: Compile linux native libs with -O2, and strip libs

* New binaries for SDL2 on Linux 5.15.0-1036-azure #43-Ubuntu SMP Wed Mar 29 16:11:05 UTC 2023 (#1440)

Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>

* SDL2.Native: Build windows native libs in CI

* New binaries for SDL2 on Microsoft Windows 10.0.20348 (#1446)

Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>

* Native: Add "no changes added to commit" as possible ignore git error case for PrUpdatedNativeBinary

* SDL2.Native: Build MacOS native libs in CI

* Update SDL2 binaries (#1448)

* New binaries for SDL2 on Darwin 21.6.0 Darwin Kernel Version 21.6.0: Thu Mar  9 20:08:59 PST 2023; root:xnu-8020.240.18.700.8~1/RELEASE_X86_64

* New binaries for SDL2 on Microsoft Windows 10.0.20348

---------

Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>

* Remove accidentally added submodule

* Regenerate SDL to new version

No code changes happened, just some shuffling of the file seemingly?

* waaaaaa

* Update checkout to v3.5.2

* Clone submodules manually, since `checkout` bad

* Temporarily disable selfhosted runner just to see if that helps

* Revert "Temporarily disable selfhosted runner just to see if that helps"

This reverts commit ce3ae5a814d2d8d8ea42808192b5dca999253e0c.

* Update SDL2 binaries (#1450)

* New binaries for SDL2 on Microsoft Windows 10.0.20348

* New binaries for SDL2 on Darwin 21.6.0 Darwin Kernel Version 21.6.0: Thu Mar  9 20:08:59 PST 2023; root:xnu-8020.240.18.700.8~1/RELEASE_X86_64

---------

Co-authored-by: The Silk.NET Automaton <9011267+

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,9 @@ jobs:
     # treated as candidates. We will never have a windows-latest self-hosted runner even if it is the latest. 
     runs-on: ${{ github.repository == 'dotnet/Silk.NET' && startsWith(github.ref, 'refs/tags/') && 'windows-quick' || github.repository == 'dotnet/Silk.NET' && 'windows-2022' || 'windows-latest' }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3.5.2
       with:
-        submodules: 'true'
+        submodules: 'false'
     - name: Setup Java JDK 11
       uses: actions/setup-java@v2.3.0
       with:
