--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "build/submodules/SPIRV-Headers"]
 	path = build/submodules/SPIRV-Headers
 	url = https://github.com/KhronosGroup/SPIRV-Headers
+[submodule "build/submodules/SPIRV-Cross"]
+	path = build/submodules/SPIRV-Cross
+	url = https://github.com/KhronosGroup/SPIRV-Cross
