Add a texture tutorial before the abstractions tutorial (#1373)
* Started texture sample

* created textures project

* add textures project to sln

* removed existing texture tutorial

* renamed abstractions project from 1.3 to 1.4

* implemented quad tutorial code as a base for textures

* added texture tutorial

* updated title i forgot to update

* added textures to abstractions tutorial

* removed temporary garbage from the project file

* found the solution to the broken solution

* Apply suggestions from code review

Co-authored-by: ThomasMiz <32400648+ThomasMiz@users.noreply.github.com>

* texture.cs fixes

* added a comment about mip level range

* added comment about uniform initialization

---------

Co-authored-by: ThomasMiz <32400648+ThomasMiz@users.noreply.github.com>

--- a/examples/CSharp/OpenGL Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
+++ b/examples/CSharp/OpenGL Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
@@ -12,14 +12,16 @@
         <ProjectReference Include="..\..\..\..\src\OpenGL\Silk.NET.OpenGL\Silk.NET.OpenGL.csproj" />
         <ProjectReference Include="..\..\..\..\src\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />
     </ItemGroup>
-
+    
     <ItemGroup>
-      <None Update="Shader.frag">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Shader.vert">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <PackageReference Include="StbImageSharp" Version="2.27.13" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <None Update="silk.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
 </Project>
+    
