--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -7,7 +7,9 @@ on:
       - "main"
     paths:
       - "build/submodules/GLFW"
-      - "build/nuke/Build.Native.cs"
+      - "build/nuke/Native/Core.cs"
+      - "build/nuke/Native/GLFW.cs"
+      - .github/workflows/glfw.yml
 jobs:
   Build:
     strategy: 
