--- a/.github/workflows/shaderc.yml
+++ b/.github/workflows/shaderc.yml
@@ -21,7 +21,7 @@ jobs:
             nuke_invoke: ./build.sh
             extras: |
               sudo apt-get update
-              sudo apt-get install -y build-essential
+              sudo apt-get install -y build-essential binutils-aarch64-linux-gnu
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
