--- a/.github/workflows/wgpu.yml
+++ b/.github/workflows/wgpu.yml
@@ -33,20 +33,20 @@ jobs:
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: dtolnay/rust-toolchain@stable
         if: runner.os == 'Windows'
         with:
-          toolchain: nightly-x86_64-pc-windows-msvc
+          toolchain: stable-x86_64-pc-windows-msvc
 
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: dtolnay/rust-toolchain@stable
         if: runner.os == 'Linux'
         with:
-          toolchain: nightly-x86_64-unknown-linux-gnu
+          toolchain: stable-x86_64-unknown-linux-gnu
 
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: dtolnay/rust-toolchain@stable
         if: runner.os == 'macOS'
         with:
-          toolchain: nightly-x86_64-apple-darwin
+          toolchain: stable-x86_64-apple-darwin
 
       - name: Add targets
         if: runner.os == 'Windows'
