--- a/docs/CODEOWNERS
+++ b/docs/CODEOWNERS
@@ -1,4 +1,4 @@
 ###############################################################################
 # Default owner for all files in the repository
 ###############################################################################
-*           @$Username
+*           @Perksey
