--- a/tests/SilkTouchX/SilkTouchX.UnitTests.csproj
+++ b/tests/SilkTouchX/SilkTouchX.UnitTests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\sources\$NewProject\$NewProject.csproj" />
+    <ProjectReference Include="..\..\sources\SilkTouchX\SilkTouchX.csproj" />
   </ItemGroup>
 
 </Project>
