--- a/tests/SilkTouchX/SilkTouchX.UnitTests.csproj
+++ b/tests/SilkTouchX/SilkTouchX.UnitTests.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
