--- a/examples/CSharp/OpenGL Demos/SelfContainedTexturedCube/SelfContainedTexturedCube.csproj
+++ b/examples/CSharp/OpenGL Demos/SelfContainedTexturedCube/SelfContainedTexturedCube.csproj
@@ -15,6 +15,8 @@
       <PackageReference Include="Silk.NET.OpenGL" Version="2.17.1" />
     
       <PackageReference Include="Silk.NET.Windowing" Version="2.17.1" />
+    
+      <PackageReference Include="StbImageSharp" Version="2.27.13" />
     </ItemGroup>
     
     <ItemGroup>
