--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,11 @@ jobs:
       with:
         java-version: 11
         distribution: "temurin"
+    - name: Setup .NET 8.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 8.0.100
+        include-prerelease: true
     - name: Setup .NET 7.0
       uses: actions/setup-dotnet@v1
       with:
