--- a/sources/Windows/Silk.NET.Win32.csproj
+++ b/sources/Windows/Silk.NET.Win32.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" InitialTargets="RemoveDuplicateItems">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -11973,6 +11973,7 @@
     <Compile Include="Windows/um/winioctl/CHANGER_ELEMENT_STATUS.gen.cs" />
     <Compile Include="Windows/um/winioctl/CHANGER_ELEMENT_STATUS.gen.cs" />
     <Compile Include="Windows/um/winioctl/CHANGER_ELEMENT_STATUS.gen.cs" />
+    <Compile Include="Windows/um/winioctl/CHANGER_ELEMENT_STATUS.gen.cs" />
     <Compile Include="Windows/um/winioctl/CHANGER_ELEMENT_STATUS_EX.gen.cs" />
     <Compile Include="Windows/um/winioctl/CHANGER_EXCHANGE_MEDIUM.gen.cs" />
     <Compile Include="Windows/um/winioctl/CHANGER_INITIALIZE_ELEMENT_STATUS.gen.cs" />
@@ -13686,4 +13687,13 @@
     <Compile Include="WinRT/winrt/winstring/WinRT.gen.cs" />
     <Compile Include="WinRT/winrt/Wsdevlicensing/WinRT.gen.cs" />
   </ItemGroup>
+  <Target Name="RemoveDuplicateItems">
+    <RemoveDuplicates Inputs="@(Compile)">
+      <Output TaskParameter="Filtered" ItemName="SilkDotNetCompile" />
+    </RemoveDuplicates>
+    <ItemGroup>
+      <Compile Remove="@(Compile)" />
+      <Compile Include="@(SilkDotNetCompile)" />
+    </ItemGroup>
+  </Target>
 </Project>
