File scoped namespaces ahoy

--- a/sources/GLFW/Silk.NET.GLFW.csproj
+++ b/sources/GLFW/Silk.NET.GLFW.csproj
@@ -12,6 +12,7 @@
     <Compile Include="glfw3/GLFWgammaramp.gen.cs" />
     <Compile Include="glfw3/GLFWimage.gen.cs" />
     <Compile Include="glfw3/GLFWimage.gen.cs" />
+    <Compile Include="glfw3/GLFWimage.gen.cs" />
     <Compile Include="glfw3/GLFWvidmode.gen.cs" />
     <!-- because Roslyn is a plonker -->
   </ItemGroup>
