ConstPtr and ConstPtr2D... done?

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -13,6 +13,7 @@
   <PropertyGroup>
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileDirectory)..\Directory.Build.props</MSBuildAllProjects>
     <ProjectCategory>tests</ProjectCategory>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <Import Project="$(MSBuildThisFileDirectory)..\Directory.Build.props" />
