--- a/sources/Playground/Playground.csproj
+++ b/sources/Playground/Playground.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GLFW\Silk.NET.GLFW.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Ultz.Native.GLFW" Version="3.3.9.1" />
+    </ItemGroup>
+  
+    <Import Project="../Core/Silk.NET.Core.targets" />
+
 </Project>
