--- a/src/Windowing/Silk.NET.Windowing.Sdl/Silk.NET.Windowing.Sdl.csproj
+++ b/src/Windowing/Silk.NET.Windowing.Sdl/Silk.NET.Windowing.Sdl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0;net8.0-android31.0;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
         <LangVersion>8</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Nullable>enable</Nullable>
@@ -25,13 +25,13 @@
     </ItemGroup>
 
     <!-- Android Specific Files -->
-    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android31.0'">
         <AndroidLibrary Update="Android\app-release.aar" Bind="true" />
         <TransformFile Include="Android/Metadata.xml" />
         <TransformFile Include="Android/EnumFields.xml" />
         <TransformFile Include="Android/EnumMethods.xml" />
     </ItemGroup>
-    <ItemGroup Condition="'$(TargetFramework)' != 'net8.0-android'">
+    <ItemGroup Condition="'$(TargetFramework)' != 'net8.0-android31.0'">
         <Compile Remove="Android/SilkActivity.cs" />
     </ItemGroup>
     
@@ -55,7 +55,7 @@
             <TfmSpecificPackageFile Include="iOS/Silk.NET.Windowing.Sdl.targets" Link="build/$(_NuGetShortFolderName)/Silk.NET.Windowing.Sdl.targets" Pack="true" PackagePath="build/$(_NuGetShortFolderName)/Silk.NET.Windowing.Sdl.targets" />
         </ItemGroup>
         <!-- Android Specific Bundled Files -->
-        <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+        <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android31.0'">
             <!-- https://github.com/xamarin/xamarin-android/issues/5957 
                  https://github.com/xamarin/xamarin-android/blob/main/Documentation/guides/OneDotNetEmbeddedResources.md -->
             <TfmSpecificPackageFile Include="Android/app-release.aar" Link="lib/$(_NuGetShortFolderName)/Silk.NET.Windowing.Sdl.aar" Pack="true" PackagePath="lib/$(_NuGetShortFolderName)/Silk.NET.Windowing.Sdl.aar" />
